--- a/数据结构和算法/字典和散列表.md
+++ b/数据结构和算法/字典和散列表.md
@@ -183,3 +183,330 @@ toString() {
 }
 ```
 
+# 散列表
+
+散列表叫`HashTable`类，也叫`HashMap`类，它是`Dictionary`类的一种散列表。
+
+## 创建散列表
+
+```javascript
+class HashTable {
+  constructor(toStrFn = defaultToString) {
+    this.toStrFn = toStrFn
+    this.table = {}
+  }
+}
+```
+
+- 创建散列函数
+
+  ```javascript
+  loseloseHashCode(key) {
+    if (typeof key === 'number') {
+      return key
+    }
+    const tableKey = this.toStrFn()
+    let hash = 0
+    for (let i = 0; i < tableKey.length; i++) {
+      // 将字符串中每个字符对应的ASCII值相加
+      hash += tableKey.charCodeAt(i)
+    }
+    // 返回hash值和一个任意数做除法的余数
+    return hash % 37
+  }
+  hashCode(key) {
+    return this.loseloseHashCode(key)
+  }
+  ```
+
+- 将键和值加入散列表
+
+  ```javascript
+  put(key, value) {
+    if (key != null && value != null) {
+      const position = this.hashCode(key)
+      this.table[position] = new ValuePair(key, value)
+      return true
+    }
+    return false
+  }
+  ```
+
+- 从散列表中获取一个值
+
+  ```javascript
+  get(key) {
+    const valuePair = this.table[this.hashCode(key)]
+    return valuePair == null ? undefined : valuePair.value
+  }
+  ```
+
+- 从散列表中移除一个值
+
+  ```javascript
+  remove(value) {
+    const hash = this.hashCode(key)
+    const valuePair = this.table[hash]
+    if (valuePair != null) {
+      delete this.table[hash]
+      return true
+    }
+    return false
+  }
+  ```
+
+## 散列表和散列集合
+
+散列集合是一个集合构成，但是插入，移除或获取元素时，使用的是`hashCode`函数。
+
+散列集合和散列表的不同之处在于，插入的只有值，没有键。
+
+## 处理散列表中的冲突
+
+`hashCode()`方法传入不同参数，输出的结果可能相同。这时后插入的数据会覆盖掉之前插入的数据。
+
+处理这种冲突的方法有：分离链接，线性探查和双散列表，这里只介绍前两种方法。
+
+首先要实现toString方法。
+
+```javascript
+toString() {
+  if (this.isEmpty()) {
+    return ''
+  }
+  const keys = Object.keys(this.table)
+  let objString = `${keys[0]} => ${this.table[keys[0]].toString()}`
+  for (let i = 0; i < keys.length; i++) {
+    objString = `${objString}, ${$keys[i]} => ${this.table[keys[i]].toString()}`
+  }
+  return objString
+}
+```
+
+### 分离链接
+
+分离链表方法为散列表的每一个位置创建一个链表并将元素存储在里面。
+
+```javascript
+class HashTableSeparateChaining {
+  constructor(toStrFn = defaultToString) {
+    this.toStrFn = toStrFn
+    this.table = {}
+  }
+  put(key, value) {
+    if (key != null && value != null) {
+      const position = this.hashCode(key)
+      if (this.table[position] == null) {
+        this.table[position] = new LinkedList()
+      }
+      this.table[position].push(new ValuePair(key, value))
+      return true
+    }
+    return false
+  }
+  get(key) {
+    const position = this.hashCode(key)
+    const linkedList = this.table[position]
+    if (linkedList != null && !linkedList.isEmpty()) {
+      let current = linkedList.getHead()
+      while (current != null) {
+        if (current.element.key === key) {
+          return current.element.value
+        }
+        current = current.next
+      }
+    }
+    return undefined
+  }
+  remove(key) {
+    const position = this.hashCode(key)
+    const linedList = this.table[position]
+    if (linkedList != null && !linkedList.isEmpty()) {
+      let current = linkedList.getHead()
+      while (current != null) {
+        if (current.element.key === key) {
+          delete this.table[position]
+        }
+        return true
+      }
+      current = current.next
+    }
+    return false
+  }
+  size() {
+    let count = 0
+    Object.values(this.table).forEach(linkedList => {
+      count += linkedList.size()
+    })
+    return count
+  }
+}
+```
+
+### 线性探查
+
+当想向表中某个位置添加一个新元素时，如果该位置已经被其它元素占据了，就尝试向后查找，知道找到一个空闲位置，并插入新元素。
+
+```javascript
+put(key, value) {
+  if (key != null && value != null) {
+    const position = this.hashCode(key)
+    if (this.table[position] == null) {
+      this.table[position] = new ValuePair(key, value)
+    } else {
+      let index = position + 1
+      while (this.table[index] != null) {
+        index++
+      }
+      this.table[index] = new ValuePair(key, value)
+    }
+    return true
+  }
+  return false
+}
+get(key) {
+  const postion = this.hashCode(key)
+  if (this.table[position] != null) {
+    if (this.table[position].key === key) {
+      return this.table[position].value
+    }
+    let index = position + 1
+    while (this.table[index] != null && this.table[index].key !== key) {
+      index ++
+    }
+    if (this.table[index] != null && this.table[index].key === key) {
+      return this.table[position].value
+    }
+  }
+  return false
+}
+```
+
+线性探查的删除方法有两种，一种是软删除。使用一个特殊值表示键值对被删除了，等被标记删除的位置越来越多后，会降低散列表的效率。
+
+```javascript
+remove(key) {
+    const position = this.hashCode(key);
+    if (this.table[position] != null) {
+      if (this.table[position].key === key && !this.table[position].isDeleted) {
+        this.table[position].isDeleted = true;
+        return true;
+      }
+      let index = position + 1;
+      while (
+        this.table[index] != null &&
+        (this.table[index].key !== key || this.table[index].isDeleted)
+      ) {
+        index++;
+      }
+      if (
+        this.table[index] != null &&
+        this.table[index].key === key &&
+        !this.table[index].isDeleted
+      ) {
+        this.table[index].isDeleted = true;
+        return true;
+      }
+    }
+    return false;
+  }
+```
+
+
+
+另一种方法是检验是否有必要将一个或多个元素移动到之前到位置，可以防止找到一个空位置。
+
+```javascript
+remove(key) {
+  const position = this.hashCode(key)
+	if (this.table[position] != null) {
+    if (this.table[position].key === key) {
+      delete this.table[position]
+      this.verifyRemoveSideEffect(key, position)
+      return true
+    }
+    let index = position + 1
+    while (this.table[index] != null && this.table[index].key !== key) {
+      index ++
+    }
+    if (this.table[index] != null && this.table[index].key === key) {
+      delete this.table[index]
+      this.verifyRemoveSideEffect(key, index)
+      return true
+    }
+  }
+  return false
+}
+// 验证删除操作是否有副作用，传入删除的key和位置
+verifyRemoveSideEffect(key, removePosition) {
+  // 被删除key的hash值
+  const hash = this.hashCode(key)
+  // 往删除位置后面查找
+  let index = removePosition + 1
+  // 直到循环到table的末尾才停止
+  while (this.table[index] != null) {
+    const posHash = this.hashCode(this.table[index].key)
+    // 如果当前位置的散列值小于等于被删除key的hash值，或者小于等于被删除位置的hash值，就把当前位置的键值对提前到被删除的key的空位置上
+    if (posHash <= hash || posHash <= removePosition) {
+      this.table[removePosition] = this.table[index]
+      delete this.table[index]
+      removePosition = index
+    }
+    index++
+  }
+}
+```
+
+## 创建更好的散列函数
+
+之前实现的散列函数太容易产生冲突，社区中有个更受推崇的散列函数`djb2`。
+
+```javascript
+djb2HashCode(key) {
+  const tableKey = this.toStrFn(key)
+  let hash = 5381
+  for (let i = 0; i < tableKey.length; i++) {
+    hash = (hash * 33) + tableKey.charCodeAt(i)
+  }
+  return hash % 1013
+}
+```
+
+# ES2015`Map`类
+
+```javascript
+const map = new Map()
+map.set('Gandalf', 'gandalf@email.com')
+map.set('John', 'johnsnow@email.com')
+map.set('Tyrion', 'tyrion@email.com')
+console.log(map.has('Gandalf')) // true
+console.log(map.size) //3,之前实现的size是方法，es的类size是个属性
+console.log(map.keys()) //{"Gandalf", "John", "Tyrion"}
+console.log(map.values()) //{"gandalf@email.com", "johnsnow@email.com", "tyrion@email.com"}
+console.log(map.get('Tyrion')) // tyrion@email.com
+```
+
+# ES2015`WeakMap`类和`WeakSet`类
+
+`Map`和`Set`与其弱化版的区别是：
+
+- `WeakMap`或`WeakSet`类没有entries，keys，values等方法
+- 只能用对象作为键
+
+弱化的类必须用键才能取出值，失去了迭代器方法，所以除非你知道键，否则无法取值。因此可以用`WeakMap`封装ES2015类的私有属性。
+
+```javascript
+const map = new WeakMap()
+const obj1 = {name: 'Gandalf'}
+const obj2 = {name: 'John'}
+const obj3 = {name: 'Tyrion'}
+map.set(obj1, 'gandalf@email.com')
+map.set(obj2, 'johnsnow@email.com')
+map.set(obj3, 'tyrion@email.com')
+console.log(map.has(obj1)) // true
+console.log(map.get(obj3)) // tyrion@email.com
+map.delete(obj2)
+```
+
+
+
