--- a/掘金笔记.md
+++ b/掘金笔记.md
@@ -1,4 +1,4 @@
-# compose函数
+# compose函数的应用
 
 [文章链接](https://juejin.cn/post/6989020415444123662?utm_source=gold_browser_extension#heading-1)
 
@@ -9,6 +9,8 @@
 其实就是一个连续且有序的异步调用。
 
 ## compose函数
+
+组合函数的本质就是通过将连续有序的函数组合起来，最终只关注输入和输出。
 
 ```javascript
 function compose(...fns) {
@@ -37,6 +39,7 @@ var compose =
             return result;
         };
 
+// fns参数是从后向前执行，如果想从前向后执行就将pop()改为shift()，本质上没有区别
 ```
 
 ## compose函数的异步改造
@@ -101,4 +104,10 @@ composeFn().then(res => { console.log(666) })
 // 666
 
 ```
+
+
+
+# 虚拟列表
+
+[原文链接](https://mp.weixin.qq.com/s/gkPOmKKD2-4TQz3TnmWbSw)
 
