--- a/计算机网络基础/计算机网络基础知识总结.md
+++ b/计算机网络基础/计算机网络基础知识总结.md
@@ -14,13 +14,13 @@
 
 除此之外，还有TCP/IP四层协议以及TCP/IP五层协议。
 
-![层次划分对应关系](/Users/396293674qq.com/Documents/MD/learingNote/img/网络层次.png"层次划分对应关系")
+![层次划分对应关系](D:\MD_note\learingNote\img\网络层次.png)
 
 ## OSI七层网络模型
 
 任何和互联网相关的操作都离不开TCP/IP协议，不管是几层模型，每一层中都要自己的专属协议。
 
-![](/Users/396293674qq.com/Documents/MD/learingNote/img/网络模型.png)
+![](D:\MD_note\learingNote\img\网络模型.png)
 
 ### 物理层（Physical Layer）
 
@@ -116,7 +116,7 @@ IP是给因特网的每一台联网设备规定一个地址，接收由更低层
 
 **TCP协议的三次握手和四次挥手**
 
-![TCP三次握手和四次挥手](/Users/396293674qq.com/Documents/MD/learingNote/img/TCP握手.png"TCP三次握手和四次挥手")
+![TCP三次握手和四次挥手](D:\MD_note\learingNote\img\TCP握手.png)
 
 **注：seq**:"sequance"序列号；**ack**:"acknowledge"确认号；**SYN**:"synchronize"请求同步标志；**；ACK**:"acknowledge"确认标志"；**FIN**："Finally"结束标志。
 
