--- a/计算机网络基础/计算机网络微课堂.md
+++ b/计算机网络基础/计算机网络微课堂.md
@@ -117,3 +117,20 @@
 ### 分类
 
 ![](D:\MD_note\learingNote\img\计算机网络分类.png)
+
+## 计算机网络的性能指标
+
+### 速率
+
+`比特`：计算机中**数据量的单位**，也是信息论中信息量的单位。一个比特就是二进制数字中的一个1或0。
+
+一个字节是`1 Byte`，一个比特是`1 bit`，8 bit = 1Byte。KB = 2<sup>10</sup>B；MB = K * KB = 2<sup>20</sup> B；GB = K * MB = 2<sup>30</sup>；TB = K * GB = 2<sup>40</sup>。
+
+*现实生活中250G的硬盘，厂家计算大小的公式是：$\cfrac {(250 * 10^9)}{2^{30}} \approx 232.8(GB)$
+
+`速率`：连接在计算机网络上的主机在数字信道上传送比特的速率，也称比特率或数据率。
+
+`bit/s(b/s, bps)`是数据率单位，表示每秒的比特数，$kb/s = 10^3 b/s$，这个kb是小写，和数据量单位里的KB不一样，KB是千字节，等于$2^{10}B$，kb是千比特，等于$10^3b$；$Mb/s = k * kb/s = 10^6b/s$；$Gb/s = k * Mb/s = {10}^9b/s$；$Tb/s = k * Gb/s = 10^{12}b/s$。
+
+### 带宽
+
